Updated about to be more united

--- a/resume/about.html
+++ b/resume/about.html
@@ -60,24 +60,25 @@
                   </div>
                   <div class="d-flex align-items-center mb-4">
                     <i
-                      class="bi bi-person-fill text-primary me-3 display-4"
+                      class="bi bi-person-badge text-primary me-3 display-4"
                     ></i>
-                    <h2 class="card-title mb-0">My Background</h2>
+                    <h2 class="card-title mb-0">Professional Background</h2>
                   </div>
                   <p class="card-text">
-                    My journey began in the culinary arts, where I honed my
-                    skills as a chef at Fitjar VGS. The precision, creativity,
-                    and problem-solving required in the kitchen have
-                    surprisingly paralleled my transition into programming. Just
-                    as each dish requires careful planning and execution, each
-                    line of code contributes to creating something meaningful.
+                    I began my career in the culinary arts, obtaining my certification from 
+                    Fitjar Vidaregåande Skule. This culinary foundation laid the groundwork for 
+                    my detail-oriented approach and ability to perform effectively in high-pressure 
+                    environments.
                   </p>
                   <p class="card-text">
-                    The decision to transition into software development came
-                    from my growing fascination with technology and its
-                    potential to create solutions that impact people's lives.
-                    This led me to Harvard's CS50, where I've discovered my
-                    passion for programming.
+                    My career evolved as I moved into industrial roles, working at Nova Sea, 
+                    Bremnes Seashore, and as a cleaner and fire watch at Subshore AS on the 
+                    Njord project. These positions have honed my skills in safety protocols, 
+                    precision work, and collaboration.
+                  </p>
+                  <p class="card-text">
+                    <i class="bi bi-envelope-fill me-2"></i>
+                    <strong>Contact:</strong> bjornmagnekristensen1999jobb@gmail.com
                   </p>
                 </div>
               </div>
@@ -87,46 +88,51 @@
                 <div class="card-body">
                   <div class="d-flex align-items-center mb-4">
                     <i class="bi bi-code-slash text-primary me-3 display-4"></i>
-                    <h2 class="card-title mb-0">CS50 Journey</h2>
+                    <h2 class="card-title mb-0">Technical Journey</h2>
                   </div>
                   <p class="card-text">
-                    CS50 has been a transformative experience, taking me from
-                    writing my first line of code to building complex
-                    applications. Through challenges like implementing data
-                    structures in C, creating web applications with Flask, and
-                    working with databases, I've developed a strong foundation
-                    in computer science principles.
+                    While building my industrial career, I've developed a growing interest in 
+                    technology and programming. This led me to Harvard's CS50 course, where I've 
+                    been learning computer science fundamentals and building various projects.
                   </p>
                   <p class="card-text">
-                    Each problem set has been a stepping stone, teaching me not
-                    just programming languages but also how to think
-                    algorithmically and solve problems efficiently. The course
-                    has equipped me with both technical skills and the
-                    confidence to tackle complex challenges.
+                    I've found many parallels between my industrial work and programming – both 
+                    require attention to detail, methodical problem-solving, and an ability to 
+                    adapt to changing requirements.
                   </p>
+                  <p class="card-text">
+                    My technical portfolio includes various small applications and tools that 
+                    demonstrate my growing programming skills. These projects range from practical 
+                    utilities to interactive web applications.
+                  </p>
+                  <div class="text-end mt-4">
+                    <a href="resume.html" class="btn btn-outline-primary">
+                      <i class="bi bi-file-earmark-text me-2"></i>View Full Resume
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </section>
 
-        <!-- Timeline Section -->
+        <!-- Professional Timeline Section -->
         <section class="mb-5">
-          <h2 class="text-center mb-4">Learning Timeline</h2>
+          <h2 class="text-center mb-4">Professional Timeline</h2>
           <div class="timeline">
             <div class="row g-4">
               <div class="col-md-3">
                 <div class="card timeline-card">
                   <div class="card-body text-center">
                     <i
-                      class="bi bi-code-square display-4 text-primary mb-3"
+                      class="bi bi-buildings display-4 text-primary mb-3"
                     ></i>
-                    <h4>Weeks 0-2</h4>
-                    <p>Foundations in C</p>
+                    <h4>2022-Present</h4>
+                    <p>Nova Sea</p>
                     <ul class="list-unstyled">
-                      <li>Scratch Programming</li>
-                      <li>C Basics</li>
-                      <li>Arrays & Functions</li>
+                      <li>Seafood Processing</li>
+                      <li>Various Roles</li>
+                      <li>Quality Control</li>
                     </ul>
                   </div>
                 </div>
@@ -134,13 +140,13 @@
               <div class="col-md-3">
                 <div class="card timeline-card">
                   <div class="card-body text-center">
-                    <i class="bi bi-diagram-3 display-4 text-primary mb-3"></i>
-                    <h4>Weeks 3-5</h4>
-                    <p>Algorithms & Data</p>
+                    <i class="bi bi-gear display-4 text-primary mb-3"></i>
+                    <h4>2021</h4>
+                    <p>Industrial Experience</p>
                     <ul class="list-unstyled">
-                      <li>Sorting & Searching</li>
-                      <li>Memory Management</li>
-                      <li>Data Structures</li>
+                      <li>Bremnes Seashore</li>
+                      <li>Subshore AS</li>
+                      <li>Fire Watch</li>
                     </ul>
                   </div>
                 </div>
@@ -149,14 +155,14 @@
                 <div class="card timeline-card">
                   <div class="card-body text-center">
                     <i
-                      class="bi bi-filetype-py display-4 text-primary mb-3"
+                      class="bi bi-award display-4 text-primary mb-3"
                     ></i>
-                    <h4>Weeks 6-7</h4>
-                    <p>Python & SQL</p>
+                    <h4>2018-2020</h4>
+                    <p>Beredt Catering</p>
                     <ul class="list-unstyled">
-                      <li>Python Programming</li>
-                      <li>Database Design</li>
-                      <li>SQL Queries</li>
+                      <li>Institutional Cook</li>
+                      <li>Safety Representative</li>
+                      <li>Competence Certificate</li>
                     </ul>
                   </div>
                 </div>
@@ -164,13 +170,13 @@
               <div class="col-md-3">
                 <div class="card timeline-card">
                   <div class="card-body text-center">
-                    <i class="bi bi-globe display-4 text-primary mb-3"></i>
-                    <h4>Weeks 8-10</h4>
-                    <p>Web Development</p>
+                    <i class="bi bi-mortarboard display-4 text-primary mb-3"></i>
+                    <h4>2015-2018</h4>
+                    <p>Vocational Education</p>
                     <ul class="list-unstyled">
-                      <li>HTML & CSS</li>
-                      <li>JavaScript</li>
-                      <li>Flask Framework</li>
+                      <li>Fitjar Vidaregåande Skule</li>
+                      <li>Restaurant Studies</li>
+                      <li>Super User IT Support</li>
                     </ul>
                   </div>
                 </div>
@@ -179,41 +185,123 @@
           </div>
         </section>
 
-        <!-- Goals Section -->
+        <!-- Skills & Certifications Section -->
+        <section class="mb-5">
+          <h2 class="text-center mb-4">Skills & Certifications</h2>
+          <div class="row g-4">
+            <div class="col-md-6">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h3 class="mb-4 text-center">Professional Skills</h3>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="mb-4">
+                        <h5><i class="bi bi-truck-flatbed text-primary me-2"></i>Equipment Operation</h5>
+                        <p class="small">Truck driver certification T1 and T4 from PETOL (June 2021)</p>
+                      </div>
+                      <div class="mb-4">
+                        <h5><i class="bi bi-fire text-primary me-2"></i>Safety Training</h5>
+                        <p class="small">Hot work certification from Subshore (May 2021)</p>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="mb-4">
+                        <h5><i class="bi bi-shield-check text-primary me-2"></i>Safety Roles</h5>
+                        <p class="small">Safety representative experience at Beredt Catering (2018-2020)</p>
+                      </div>
+                      <div class="mb-4">
+                        <h5><i class="bi bi-person-workspace text-primary me-2"></i>Professional Attributes</h5>
+                        <p class="small">Team collaboration, precision work, adaptability, punctuality</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h3 class="mb-4 text-center">Technical & Development Skills</h3>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="mb-4">
+                        <h5><i class="bi bi-code-square text-primary me-2"></i>Programming</h5>
+                        <p class="small">C, Python, JavaScript, HTML/CSS (CS50 course)</p>
+                      </div>
+                      <div class="mb-4">
+                        <h5><i class="bi bi-laptop text-primary me-2"></i>Computer Skills</h5>
+                        <p class="small">Microsoft Office, basic programming, IT support experience</p>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="mb-4">
+                        <h5><i class="bi bi-globe text-primary me-2"></i>Languages</h5>
+                        <p class="small">Norwegian (native), English (good written and spoken)</p>
+                      </div>
+                      <div class="mb-4">
+                        <h5><i class="bi bi-currency-exchange text-primary me-2"></i>Transferable Skills</h5>
+                        <p class="small">Problem-solving, attention to detail, process optimization</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Development Goals Section -->
         <section>
-          <h2 class="text-center mb-4">Future Goals</h2>
+          <h2 class="text-center mb-4">Future Development Goals</h2>
           <div class="row justify-content-center">
             <div class="col-md-8">
               <div class="card">
                 <div class="card-body">
                   <div class="d-flex align-items-center mb-4">
-                    <i
-                      class="bi bi-rocket-takeoff text-primary me-3 display-4"
-                    ></i>
-                    <h3 class="card-title mb-0">What's Next?</h3>
+                    <i class="bi bi-rocket-takeoff text-primary me-3 display-4"></i>
+                    <h3 class="card-title mb-0">Career Development Plan</h3>
                   </div>
-                  <p class="card-text">
-                    As I near the completion of CS50, I'm excited about the next
-                    steps in my programming journey:
-                  </p>
-                  <ul class="list-unstyled">
-                    <li class="mb-3">
-                      <i class="bi bi-check-circle-fill text-success me-2"></i>
-                      Deepening my knowledge of web development frameworks
-                    </li>
-                    <li class="mb-3">
-                      <i class="bi bi-check-circle-fill text-success me-2"></i>
-                      Contributing to open-source projects
-                    </li>
-                    <li class="mb-3">
-                      <i class="bi bi-check-circle-fill text-success me-2"></i>
-                      Building a portfolio of full-stack applications
-                    </li>
-                    <li class="mb-3">
-                      <i class="bi bi-check-circle-fill text-success me-2"></i>
-                      Exploring software development opportunities
-                    </li>
-                  </ul>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <h5 class="mb-3">Professional Growth</h5>
+                      <ul class="list-unstyled">
+                        <li class="mb-3">
+                          <i class="bi bi-check-circle-fill text-success me-2"></i>
+                          Further develop industrial expertise and certifications
+                        </li>
+                        <li class="mb-3">
+                          <i class="bi bi-check-circle-fill text-success me-2"></i>
+                          Enhance safety and equipment operation qualifications
+                        </li>
+                        <li class="mb-3">
+                          <i class="bi bi-check-circle-fill text-success me-2"></i>
+                          Pursue advancement opportunities within current industry
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="col-md-6">
+                      <h5 class="mb-3">Technical Development</h5>
+                      <ul class="list-unstyled">
+                        <li class="mb-3">
+                          <i class="bi bi-check-circle-fill text-success me-2"></i>
+                          Complete CS50 and continue programming education
+                        </li>
+                        <li class="mb-3">
+                          <i class="bi bi-check-circle-fill text-success me-2"></i>
+                          Build a portfolio of development projects
+                        </li>
+                        <li class="mb-3">
+                          <i class="bi bi-check-circle-fill text-success me-2"></i>
+                          Explore how technology can enhance industrial processes
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="text-center mt-4">
+                    <a href="../index.html" class="btn btn-primary">
+                      <i class="bi bi-collection me-2"></i>View Project Gallery
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
