--- a/resume/index.html
+++ b/resume/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Personal website showcasing CS50 projects and programming journey"
+      content="Professional portfolio of Bjørn-Magne Kristensen showcasing work experience, skills, and development projects"
     />
     <meta
       name="keywords"
-      content="CS50, programming, web development, portfolio"
+      content="Bjørn-Magne Kristensen, Portfolio, Resume, CV, Industrial Experience, Development"
     />
     <meta name="author" content="Bjørn-Magne" />
-    <title>CS50 Portfolio | Home</title>
+    <title>Professional Portfolio | Bjørn-Magne Kristensen</title>
     <link rel="apple-touch-icon" sizes="180x180" href="logo/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="logo/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="logo/favicon-16x16.png">
@@ -36,25 +36,25 @@
       <div class="container">
         <div class="mb-4">
           <img 
-            src="logo/eyJ0IjoiMSIsImsiOiJBMWQifQ.aixw6NNViq2aue8O5eQrn4_EefayE5gkO96CnhTML9jL8lnk2uuMl_0j6bM529VSaS1jvrBPiMOAlMd8CSmyrYZX05Vg_CldLfcTuWamEU_etEe-oi0Z6mA7gW_YUkm7.g3HN63S89t_FdH4GbSbIDg.jpg" 
+            src="logo/eyJ0IjoiMSIsImsiOiJBMWQifQ.S8meniKQA2F4t4JFULFdq5sz_fms-ov4xfDQHAqpvpvjK0S6YFJx9xjWZ-dNSDw-0bWH8BJz0Y4dxElQxYZ7TGrfTDcgjjSt6HlZ2vAQqRnWj4_xLiG9KDxrOfTMOzzm.XAy464KuT99MPGm9FoiU2A.jpg" 
             alt="Profile Picture" 
             class="rounded-circle img-thumbnail profile-image"
             style="width: 150px; height: 150px; object-fit: cover; margin-bottom: 20px;"
           />
         </div>
         <h1 class="display-4 fw-bold mb-4 animate-up">
-          Welcome to My CS50 Journey
+          Bjørn-Magne Kristensen
         </h1>
         <p class="lead mb-5 animate-up-delay">
-          Exploring the world of computer science through Harvard's CS50
+          Industrial Professional & Aspiring Developer
         </p>
         <div class="d-flex justify-content-center gap-3 animate-up-delay-2">
-          <a href="about.html" class="btn btn-primary btn-lg">Learn More</a>
-          <a href="contact.html" class="btn btn-outline-light btn-lg"
-            >Get in Touch</a
+          <a href="about.html" class="btn btn-primary btn-lg">About Me</a>
+          <a href="resume.html" class="btn btn-outline-light btn-lg"
+            >View Resume</a
           >
-          <a href="../index.html" class="btn btn-outline-light btn-lg"
-            >View All Projects</a
+          <a href="contact.html" class="btn btn-outline-light btn-lg"
+            >Contact</a
           >
         </div>
       </div>
@@ -62,37 +62,21 @@
 
     <!-- Main Content -->
     <main>
-      <!-- Featured Projects -->
+      <!-- Professional Experience -->
       <section class="py-5">
         <div class="container">
-          <h2 class="text-center mb-5">Featured Projects</h2>
+          <h2 class="text-center mb-5">Professional Experience</h2>
           <div class="row g-4">
             <div class="col-md-4">
               <div class="card h-100 project-card">
                 <div class="card-body">
-                  <i class="bi bi-code-square display-4 text-primary mb-3"></i>
-                  <h3 class="card-title">JavaPlay</h3>
+                  <i class="bi bi-buildings display-4 text-primary mb-3"></i>
+                  <h3 class="card-title">Industrial Work</h3>
                   <p class="card-text">
-                    Interactive JavaScript experiments and games showcasing web
-                    development skills.
-                  </p>
-                  <a href="javaplay.html" class="btn btn-outline-primary"
-                    >Explore</a
-                  >
-                </div>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <div class="card h-100 project-card">
-                <div class="card-body">
-                  <i class="bi bi-person-vcard display-4 text-primary mb-3"></i>
-                  <h3 class="card-title">Portfolio</h3>
-                  <p class="card-text">
-                    A collection of my best work and achievements throughout
-                    CS50.
+                    Experience at Nova Sea and Bremnes Seashore in seafood processing and quality control.
                   </p>
                   <a href="resume.html" class="btn btn-outline-primary"
-                    >View Resume</a
+                    >View Details</a
                   >
                 </div>
               </div>
@@ -100,14 +84,27 @@
             <div class="col-md-4">
               <div class="card h-100 project-card">
                 <div class="card-body">
-                  <i class="bi bi-journal-code display-4 text-primary mb-3"></i>
-                  <h3 class="card-title">CS50 Journey</h3>
+                  <i class="bi bi-fire display-4 text-primary mb-3"></i>
+                  <h3 class="card-title">Safety Operations</h3>
                   <p class="card-text">
-                    My learning experience and growth through Harvard's CS50
-                    course.
+                    Fire watch and cleaning roles at Subshore AS on the Njord project with relevant certifications.
                   </p>
-                  <a href="about.html" class="btn btn-outline-primary"
-                    >Read More</a
+                  <a href="resume.html#certifications" class="btn btn-outline-primary"
+                    >See Certifications</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card h-100 project-card">
+                <div class="card-body">
+                  <i class="bi bi-code-slash display-4 text-primary mb-3"></i>
+                  <h3 class="card-title">Development Skills</h3>
+                  <p class="card-text">
+                    Growing technical capabilities in web development and programming fundamentals.
+                  </p>
+                  <a href="javaplay.html" class="btn btn-outline-primary"
+                    >View Projects</a
                   >
                 </div>
               </div>
@@ -116,17 +113,16 @@
         </div>
       </section>
 
-      <!-- Other Projects Section -->
+      <!-- Portfolio Projects Section -->
       <section class="py-5 bg-light">
         <div class="container">
-          <h2 class="text-center mb-5">Other Portfolio Projects</h2>
+          <h2 class="text-center mb-5">Portfolio Projects</h2>
           <p class="text-center mb-4">
-            This resume is part of a larger collection of mini-projects
-            showcasing different web development skills.
+            A collection of interactive web projects showcasing my development skills and technical growth.
           </p>
           <div class="text-center mb-4">
             <a href="../index.html" class="btn btn-primary"
-              >Explore All Projects</a
+              >View All Projects</a
             >
           </div>
           <div class="row g-4 mt-3">
@@ -179,41 +175,53 @@
       <!-- Skills Section -->
       <section class="py-5">
         <div class="container">
-          <h2 class="text-center mb-5">Skills Learned</h2>
+          <h2 class="text-center mb-5">Professional Skills</h2>
           <div class="row g-4 text-center">
-            <div class="col-6 col-md-3">
+            <div class="col-6 col-md-2">
+              <div class="skill-item">
+                <i class="bi bi-shield-check display-4 text-primary"></i>
+                <h4 class="mt-3">Safety</h4>
+              </div>
+            </div>
+            <div class="col-6 col-md-2">
+              <div class="skill-item">
+                <i class="bi bi-truck display-4 text-primary"></i>
+                <h4 class="mt-3">Equipment</h4>
+              </div>
+            </div>
+            <div class="col-6 col-md-2">
+              <div class="skill-item">
+                <i class="bi bi-people display-4 text-primary"></i>
+                <h4 class="mt-3">Teamwork</h4>
+              </div>
+            </div>
+            <div class="col-6 col-md-2">
               <div class="skill-item">
                 <i class="bi bi-code-slash display-4 text-primary"></i>
-                <h4 class="mt-3">C</h4>
+                <h4 class="mt-3">Coding</h4>
               </div>
             </div>
-            <div class="col-6 col-md-3">
+            <div class="col-6 col-md-2">
               <div class="skill-item">
-                <i class="bi bi-filetype-py display-4 text-primary"></i>
-                <h4 class="mt-3">Python</h4>
+                <i class="bi bi-laptop display-4 text-primary"></i>
+                <h4 class="mt-3">Web Dev</h4>
               </div>
             </div>
-            <div class="col-6 col-md-3">
-              <div class="skill-item">
-                <i class="bi bi-database display-4 text-primary"></i>
-                <h4 class="mt-3">SQL</h4>
-              </div>
-            </div>
-            <div class="col-6 col-md-3">
+            <div class="col-6 col-md-2">
               <div class="skill-item">
                 <i class="bi bi-globe display-4 text-primary"></i>
-                <h4 class="mt-3">Web Dev</h4>
+                <h4 class="mt-3">Languages</h4>
               </div>
             </div>
           </div>
         </div>
       </section>
+
+      <!-- Footer Container -->
+      <div id="footer-container"></div>
     </main>
 
-    <!-- Footer Container -->
-    <div id="footer-container"></div>
-
-    <!-- Scripts -->
+    <!-- Bootstrap JS and other scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="common.js"></script>
   </body>
