--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>JavaScript Projects Collection | Bjørn-Magne</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="/assets/logo/logo.png" />
 
     <!-- TailwindCSS -->
     <link
