--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           JavaScript Projects Collection
         </h1>
         <p class="text-center text-gray-600 mt-2">
-          A showcase of 20 interactive web development projects
+          Showcase of my side track web development projects
         </p>
       </div>
     </header>
