--- a/resume/resume.html
+++ b/resume/resume.html
@@ -315,7 +315,7 @@
                         </div>
                         <div class="timeline-content">
                           <h5>CS50: Introduction to Computer Science</h5>
-                          <p>Harvard University (edX) - Currently in progress</p>
+                          <p>Harvard University (edX) - Completed</p>
                         </div>
                       </div>
                     </div>
