--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <title>JavaScript Projects Collection | Bjørn-Magne</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/assets/logo/logo.png" />
+    <link rel="icon" type="image/png" href="./assets/logo/favicon-32x32.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/logo/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/logo/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/logo/favicon-16x16.png" />
+    <link rel="manifest" href="./assets/logo/site.webmanifest" />
 
     <!-- TailwindCSS -->
     <link
