--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -33,9 +33,9 @@
       <h1 class="title">Pomodoro Timer</h1>
       <p class="timer" id="timer">25.00</p>
       <div class="button-wrapper">
-        <button id="start">Start</button>
-        <button id="stop">Stop</button>
-        <button id="reset">Reset</button>
+        <button id="start-button">Start</button>
+        <button id="stop-button">Stop</button>
+        <button id="reset-button">Reset</button>
       </div>
     </div>
     <script src="index.js"></script>
