--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -28,7 +28,12 @@
     />
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/base.css" />
+    <link rel="stylesheet" href="css/timer.css" />
+    <link rel="stylesheet" href="css/buttons.css" />
+    <link rel="stylesheet" href="css/tasks.css" />
+    <link rel="stylesheet" href="css/quote.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
 
     <title>Pomodoro Timer</title>
 
@@ -117,6 +122,9 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="index.js"></script>
+    <script src="js/timer.js"></script>
+    <script src="js/quotes.js"></script>
+    <script src="js/storage.js"></script>
+    <script src="js/tasks.js"></script>
   </body>
 </html>
