--- a/pomodoro/index.html
+++ b/pomodoro/index.html
@@ -10,13 +10,13 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="../assets/logo/favicon-32x32.png"
+      href="./assets/logo/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../assets/logo/favicon-16x16.png"
+      href="./assets/logo/favicon-16x16.png"
     />
 
     <!-- Google Fonts - Poppins -->
@@ -72,6 +72,9 @@
         <button class="pomodoro-btn pomodoro-btn-reset" id="reset-button">
           <i class="fas fa-redo"></i> Reset
         </button>
+        <button class="pomodoro-btn pomodoro-btn-sound" id="sound-toggle">
+          <i class="fas fa-volume-up"></i>
+        </button>
       </div>
     </div>
 
@@ -112,11 +115,7 @@
         — Cal Newport (2016)
       </p>
     </div>
-    <!--- Audio Element for Notification Sound -->
-    <audio id="pomodoro-notification" controls>
-      <source src="assets/sound/mixkit-alert-alarm-1005.wav" type="audio/ogg" />
-      Your browser does not support the audio element.
-    </audio>
+
     <!-- JavaScript -->
     <script src="js/sounds.js"></script>
     <script src="js/storage.js"></script>
